--- a/nextjsapp/templates/service.yaml
+++ b/nextjsapp/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nextjsapp.fullname" . }}
+  name: nextjs-np
 spec:
   type: {{ .Values.service.type }}
   ports:
